methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:7: error: ':' expected but ',' found.
def move(nbPas, versLAvant) {
              ^FlowerPot:51: error: identifier expected but '}' found.
} 
^FlowerPot:53: error: Unmatched closing brace '}' ignored here
}
^